--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/encoding-japanese": "^1.0.16",
     "@types/express": "4.17.13",
     "@types/selenium-webdriver": "^4.0.15",
+    "compress-images": "^2.0.5",
     "encoding-japanese": "^1.0.30",
     "express": "^4.17.1",
     "log4js": "^6.3.0",
